--- a/style/global.css
+++ b/style/global.css
@@ -13,25 +13,54 @@ body {
 	color: #424242;
 }
 
+.container {
+	position: relative;
+	width: 1280px;
+}
+
 #app {
 	height: 100%;
+	font-family: "Trebuchet MS";
+	background-color: #EEEEEE;
 }
 
 #app > .nav {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 0;
 	height: 100%;
-	padding: 2rem;
 	display: grid;
 	place-items: center;
 	background-color: #212121;
 	color: #F5F5F5;
+	overflow: hidden;
+	transition: 0.5s;
+	z-index: 1;
+}
+
+#app > .nav.open {
+	width: 100%;
+}
+
+#app > .nav > .container {
+	padding: 3rem 6rem;
+	width: 1024px;
+	height: 512px;
+}
+
+#app > .nav > .container > * {
+	margin-top: 3rem;
 }
 
 #app > .nav .close {
 	position: absolute;
-	right: 3rem;
-	top: 3rem;
+	right: 6rem;
+	top: 0;
 	width: 3rem;
 	height: 3rem;
+	margin: 0;
+	padding: 0;
 	line-height: 3rem;
 	font-size: 3rem;
 	text-align: center;
@@ -41,21 +70,82 @@ body {
 	color: #FFCDD2;
 }
 
-#app > .nav .link a.item {
+#app > .nav a.item {
 	display: block;
 	font-size: 3rem;
-	line-height: 3rem;
+	line-height: 2rem;
 	text-decoration: none;
 	font-weight: bolder;
 	color: #616161;
 }
 
-#app > .nav .link a.item:hover {
+#app > .nav a.item:hover {
 	color: #F5F5F5;
 }
 
-#app > .nav .link .massage {
-	margin-top: 2rem;
+#app > .nav .massage {
 	line-height: 2rem;
 	font-size: 1.2rem;
+}
+
+#app > .header {
+	line-height: 3.5rem;
+	font-size: 1.5rem;
+	padding: 0 2rem;
+	font-weight: bolder;
+	box-shadow: 0 0 1rem #BDBDBD;
+	background-color: #FAFAFA;
+}
+
+#app > .header > .container {
+	display: flex;
+	justify-content: space-between;
+	margin: auto;
+}
+
+#app > .header .menu {
+	display: flex;
+	cursor: pointer;
+}
+
+#app > .header .menu > .item {
+	width: 3rem;
+	height: 3rem;
+	text-align: center;
+}
+
+#app > .header .menu > .item:hover {
+	color: #2979FF;
+}
+
+@media screen and (max-width: 1280px) {
+	.container {
+		width: 100%;
+	}
+}
+
+@media screen and (max-width: 1024px) {
+	#app > .nav > .container {
+		width: 100%;
+	}
+}
+
+@media screen and (max-width: 768px) {
+	#app > .nav > .container {
+		height: 100%;
+		display: grid;
+		place-items: center;
+		padding: 0;
+	}
+	
+	#app > .nav .close {
+		top: 1rem;
+		right: 1rem;
+	}
+	
+	#app > .nav a.item {
+		color: #F5F5F5;
+		line-height: 4rem;
+		text-align: center;
+	}
 }
